Fix gap between controlstrip and content
git-svn-id: http://code.livejournal.org/svn/livejournal/trunk@7687 1dfba125-df10-0410-8a77-af1a8d6d074f

--- a/htdocs/stc/controlstrip.css
+++ b/htdocs/stc/controlstrip.css
@@ -2,7 +2,7 @@
 
 html body
 {
-    padding: 45px 0 0 0;
+    padding: 50px 0 0 0;
     margin-right: 0;
     margin-left: 0;
 }
@@ -121,5 +121,5 @@ html body
 {
     vertical-align: middle;
     padding-left: 1em;
-    width: 26.5em; 
+    width: 28.5em; 
 }
